# django-tutorial-example

./: .gitignore  README.md  pyproject.toml
accounts/: views.py
articles/: admin.py  views.py
articles/migrations/: 0001_initial.py
templates/: base.html  home-view.html
templates/accounts/: login.html
templates/articles/: create.html  detail.html  search.html
trydjango/: settings.py  urls.py  views.py
