[tool.poetry]
name = "django3.2"
version = "0.1.0"
description = "Django 3.2 tutorial"
authors = ["Joon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.2,<3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
